src/parser/snapshots/almond__parser__expression__tests__exponentiation-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x ** y ** z\".into()).unwrap().1"
---
{
  "type": "BinaryExpression",
  "operator": "**",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "operator": "**",
    "left": {
      "type": "Identifier",
      "name": "y",
      "start": 5,
      "end": 6
    },
    "right": {
      "type": "Identifier",
      "name": "z",
      "start": 10,
      "end": 11
    },
    "start": 5,
    "end": 11
  },
  "start": 0,
  "end": 11
}
