src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-10.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"a = b = c;\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "Identifier",
    "name": "a",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "AssignmentExpression",
    "operator": "=",
    "left": {
      "type": "Identifier",
      "name": "b",
      "start": 4,
      "end": 5
    },
    "right": {
      "type": "Identifier",
      "name": "c",
      "start": 8,
      "end": 9
    },
    "start": 4,
    "end": 9
  },
  "start": 0,
  "end": 9
}
