src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-12.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x **= y\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "**=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Identifier",
    "name": "y",
    "start": 6,
    "end": 7
  },
  "start": 0,
  "end": 7
}
