src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-8.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"hello.value = \\\"world\\\"\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "hello",
      "start": 0,
      "end": 5
    },
    "property": {
      "type": "Identifier",
      "name": "value",
      "start": 6,
      "end": 11
    },
    "computed": false,
    "start": 0,
    "end": 11
  },
  "right": {
    "type": "Literal",
    "value": "world",
    "start": 14,
    "end": 21
  },
  "start": 0,
  "end": 21
}
