src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x = 1\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "Literal",
    "value": 1.0,
    "start": 4,
    "end": 5
  },
  "start": 0,
  "end": 5
}
